[Add]実装課題2/8.19:00進捗分

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,3 +4,9 @@ ja:
       payment:
         credit_card: 'クレジットカード'
         transfer: '銀行振込'
+  views:
+    pagination:
+      first: "≪ First"
+      previous: "< Previous"
+      next: "Next >"
+      last: "Last ≫"
